--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lucide-react": "^0.546.0",
     "matter-js": "^0.20.0",
     "motion": "^12.23.24",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "nuqs": "^2.7.2",
     "poly-decomp": "^0.3.0",
     "react": "19.1.0",
